35_404_error.html changing to 404.html

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -97,7 +97,7 @@ toc:
         url: /37_pricing.html
 
       - page: 404
-        url: /35_404_error.html
+        url: /404.html
 
       - page: Coming Soon
         url: /36_coming_soon.html
