--- a/_data/responsive_menu.yml
+++ b/_data/responsive_menu.yml
@@ -97,7 +97,7 @@ toc:
         url: /37_pricing.html
 
       - page: 404
-        url: /35_404_error.html
+        url: /404.html
 
       - page: Coming Soon
         url: /36_coming_soon.html
